--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
 
     <configSections>
@@ -16,7 +16,10 @@
     </configSections>  
 
     <appSettings />
-    <connectionStrings />
+    <connectionStrings>
+        <add name="DataBindingDB" connectionString="Data Source=.;Initial Catalog=DataBinding;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
         <compilation debug="true">
 
