--- a/Web.config
+++ b/Web.config
@@ -17,8 +17,8 @@
 
     <appSettings />
     <connectionStrings>
-        <add name="DataBindingDB" connectionString="Data Source=.;Initial Catalog=DataBinding;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+      <!-- <add name="DataBindingDB" connectionString="Data Source=.;Initial Catalog=DataBinding;Integrated Security=True"
+            providerName="System.Data.SqlClient" /> -->
         <add name="DataBindingDBKey" connectionString="Data Source=.;Initial Catalog=DataBinding;User ID=sa;Password=rapanui"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
